--- a/css/style-blocks.css
+++ b/css/style-blocks.css
@@ -1,66 +1,115 @@
-.GeneralBlock {
-  position: absolute;
-  left: 2%;
-  right: 2%;
-  margin: 5% 10%;
-  padding: 5%;
-  height: 50%;
-  width: 66%;
-  background: #ffffff;
-  border: solid black;
+.general-block {
+  position: relative;
+  margin: 7%;
+  border: solid black 3px;
+  width: 86%;
+  height: 500px;
 }
 .name-of-title {
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   margin: 0;
-  width: 20%;
-  height: 10%;
-  top: 15%;
-  left: 40%;
-  font-family: Inter;
-  font-style: normal;
-  font-weight: normal;
+  width: 30%;
+  height: 16%;
+  left: 35%;
   text-align: center;
 }
 
 .into-block {
   position: absolute;
-  top: 25%;
-  left: 10%;
-  width: 80%;
-  height: 20%;
+  top: 16%;
+  width: 100%;
+  height: 84%;
 }
-
+.nav-enter-size {
+  position: absolute;
+  width: 100%;
+  height: 70%;
+}
 .nav-copy-result {
   position: absolute;
-  display: inline-block;
-  top: 65%;
-  left: 15%;
-  width: 70%;
-  height: 25%;
+  top: 70%;
+  width: 100%;
+  height: 30%;
 }
 .in-block {
-  display: inline-block;
+  display: inline;
+}
+.select-size,
+input-size {
+  width: 200px;
+  height: 55px;
+  text-align: center;
+  font-size: 25px;
 }
 .input-num-size {
+  position: absolute;
+  width: 20%;
+  height: 30%;
   text-align: center;
-  position: relative;
-  top: 10%;
-  padding: 2.5%;
-  width: 15%;
+  top: 40%;
+  left: 5%;
 }
-.input-size {
+.input-num-size > label {
+  width: auto;
+  height: auto;
   text-align: center;
-  position: relative;
-  top: 10%;
-  padding: 2.5%;
-  width: 18%;
+  font-size: 20px;
+}
+.input-num-size > label > input {
+  width: 65%;
+  height: auto;
+  text-align: center;
+  font-size: 20px;
+}
+.input1 {
+  position: absolute;
+  text-align: center;
+  top: 40%;
+  left: 25%;
 }
 .in-block-arr {
   position: absolute;
+  text-align: center;
+  width: 2%;
+  top: 40%;
+  left: 48%;
 }
-.float1 {
-  float: left;
+.input2 {
+  position: absolute;
+  text-align: center;
+  top: 40%;
+  right: 25%;
 }
-.float2 {
-  float: right;
+.button-upload > button {
+  position: absolute;
+  width: 200px;
+  height: 55px;
+  text-align: center;
+  font-size: 25px;
+  top: 40%;
+  right: 5%;
+}
+.end-result > output {
+  position: absolute;
+  left: 35%;
+  top: 20%;
+  width: 30%;
+  height: 20%;
+}
+.close-end-result {
+  position: absolute;
+  right: 35%;
+  top: 10%;
+}
+.copy-end-result > button {
+  position: absolute;
+  width: 30%;
+  height: 20%;
+  text-align: center;
+  font-size: 15px;
+  top: 40%;
+  left: 35%;
 }
