--- a/css/style-blocks.css
+++ b/css/style-blocks.css
@@ -1,115 +1,33 @@
 .general-block {
-  position: relative;
-  margin: 7%;
-  border: solid black 3px;
-  width: 86%;
-  height: 500px;
-}
-.name-of-title {
-  position: absolute;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin: 0;
-  width: 30%;
-  height: 16%;
-  left: 35%;
-  text-align: center;
+    margin: auto;
+    padding: 2%;
+    border: 1px solid black;
 }
 
-.into-block {
-  position: absolute;
-  top: 16%;
-  width: 100%;
-  height: 84%;
+.name-of-title {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-.nav-enter-size {
-  position: absolute;
-  width: 100%;
-  height: 70%;
+
+.input-size {
+    display: inline-flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    width: 100%;
 }
-.nav-copy-result {
-  position: absolute;
-  top: 70%;
-  width: 100%;
-  height: 30%;
+
+.btn-calc {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
-.in-block {
-  display: inline;
-}
-.select-size,
-input-size {
-  width: 200px;
-  height: 55px;
-  text-align: center;
-  font-size: 25px;
-}
-.input-num-size {
-  position: absolute;
-  width: 20%;
-  height: 30%;
-  text-align: center;
-  top: 40%;
-  left: 5%;
-}
-.input-num-size > label {
-  width: auto;
-  height: auto;
-  text-align: center;
-  font-size: 20px;
-}
-.input-num-size > label > input {
-  width: 65%;
-  height: auto;
-  text-align: center;
-  font-size: 20px;
-}
-.input1 {
-  position: absolute;
-  text-align: center;
-  top: 40%;
-  left: 25%;
-}
-.in-block-arr {
-  position: absolute;
-  text-align: center;
-  width: 2%;
-  top: 40%;
-  left: 48%;
-}
-.input2 {
-  position: absolute;
-  text-align: center;
-  top: 40%;
-  right: 25%;
-}
-.button-upload > button {
-  position: absolute;
-  width: 200px;
-  height: 55px;
-  text-align: center;
-  font-size: 25px;
-  top: 40%;
-  right: 5%;
-}
-.end-result > output {
-  position: absolute;
-  left: 35%;
-  top: 20%;
-  width: 30%;
-  height: 20%;
-}
-.close-end-result {
-  position: absolute;
-  right: 35%;
-  top: 10%;
-}
-.copy-end-result > button {
-  position: absolute;
-  width: 30%;
-  height: 20%;
-  text-align: center;
-  font-size: 15px;
-  top: 40%;
-  left: 35%;
+
+.copy-close-result {
+    display: flex;
+    align-content: center;
+    justify-content: center;
+    flex-wrap: wrap;
 }
