--- a/css/style-blocks.css
+++ b/css/style-blocks.css
@@ -1,28 +1,29 @@
 .general-block {
-  margin: auto;
-  padding: 15px;
-  border: 3px solid silver;
+    margin: auto;
+    padding: 15px;
+    border: 3px solid silver;
 }
 
 h1 {
-  font-family: Arial, Helvetica, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 .name-of-title,
 .input-size {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: nowrap;
-  justify-content: space-around;
-  align-items: center;
-  margin: 50px;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-around;
+    align-items: center;
+    margin: 50px;
 }
+
 .copy-close-result,
-.btns {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 50px;
+.buttons {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 50px;
 }
 
 .select-size,
@@ -31,25 +32,31 @@ h1 {
 .btn-copy,
 .enter-num,
 .out-result {
-  padding: 10px;
-  text-align: center;
-  font-size: 15px;
-  font-family: Arial, Helvetica, sans-serif;
-  border-radius: 10%;
-  border: 2px solid rgb(36, 23, 23);
-  background: rgb(200, 207, 179);
+    padding: 10px;
+    text-align: center;
+    font-size: 15px;
+    font-family: Arial, Helvetica, sans-serif;
+    border-radius: 10%;
+    border: 2px solid rgb(36, 23, 23);
+    background: rgb(200, 207, 179);
 }
 
 .text-input {
-  font-family: Arial, Helvetica, sans-serif;
-  position: relative;
-  bottom: 33px;
-  left: 50%;
+    font-family: Arial, Helvetica, sans-serif;
+    position: relative;
+    bottom: 33px;
+    left: 50%;
 }
+
 .out-result {
-  width: 150px;
-  height: 25px;
+    width: 150px;
+    height: 25px;
 }
+
 .btn-calc {
-  margin-right: 5%;
+    margin-right: 5%;
+}
+
+#close_img {
+    margin-bottom: 25px;
 }
