--- a/css/style-adaptive.css
+++ b/css/style-adaptive.css
@@ -2,7 +2,7 @@
   .general-block {
     margin: 1vh;
     padding: 15px;
-    border: 3px solid silver;
+    border: 3px solid rgb(255, 2, 2);
   }
 
   .select-size,
@@ -13,18 +13,18 @@
   .out-result {
     padding: 5px;
     text-align: center;
-    font-size: 70%;
+    font-size: 80%;
     font-family: Arial, Helvetica, sans-serif;
     border-radius: 10%;
-    border: 1px solid rgb(36, 23, 23);
-    background: rgb(200, 207, 179);
+    border: 1px solid rgb(207, 45, 45);
+    background: rgba(15, 144, 214, 0.516);
   }
 
   h1 {
     display: flex;
     justify-content: center;
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 1rem;
+    font-size: 18px;
   }
 
   .name-of-title,
@@ -41,7 +41,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    margin: 1%;
+    margin: 5%;
   }
 
   .inputs_ {
@@ -49,7 +49,7 @@
     flex-flow: column wrap;
     align-items: center;
     justify-content: center;
-    margin: 1%;
+    margin: 5%;
   }
   .text-input {
     font-family: Arial, Helvetica, sans-serif;
@@ -57,8 +57,11 @@
   }
 
   .out-result {
+    display: flex;
+    align-items: center;
+    justify-content: center;
     width: 100px;
-    height: 20px;
+    height: 15px;
   }
 
   .btn-calc {
@@ -74,6 +77,6 @@
     transform: rotate(90deg);
   }
   .input-size {
-    min-height: 200px;
+    min-height: 220px;
   }
 }
